[build-system]
# https://github.com/ofek/hatch-showcase/blob/master/pyproject.toml
# $ python3 -m build
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "popyka"
dynamic = ["version"]
license = { file = "LICENSE" }

description = "Lightweight Python-based CDC system, supports PostgreSql to Kafka"
readme = "README.md"
requires-python = ">=3.10"
keywords = [
    "cdc",
]
authors = [
    { name = "Horacio G. de Oro", email = "hgdeoro@gmail.com" },
]
classifiers = [
    # https://pypi.org/classifiers/
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: System :: Distributed Computing",
]

[tool.hatch.version]
path = "popyka/__version__.py"

[tool.hatch.build.targets.sdist]
exclude = [
  "/docs",
  "/reqs",
  "/tests",
]

[tool.hatch.build.targets.wheel]
packages = ["popyka"]

[tool.isort]
profile = "black"

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120
